--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=""
-RESEND_API_KEY=""
+MONGODB_URI="mongodb+srv://amit:message@message.vgyj1sz.mongodb.net/"
+RESEND_API_KEY="re_ap2tuyhi_DmEJgDMpiqrxKrtRpMJp9L5M"
 NEXTAUTH_SECRET=coding
